spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ section.blue {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 3em;
+  line-height: 1.5em;
 }
 
 .text {
